fixes color bug that caused some white underbelly to show when the page content wasn't tall enough to stretch down and cover it up

--- a/WebApp/client/app.css
+++ b/WebApp/client/app.css
@@ -16,6 +16,7 @@
   html, body {
     font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
     height: 100%;
+    background-color: #FAFAFA;
   }
 
   ul {
